--- a/front-end/src/styles/globals.css
+++ b/front-end/src/styles/globals.css
@@ -7,6 +7,6 @@
 
     font-family: "Poppins", sans-serif;
 
-    ::-webkit-scrollbar{    width :5px;  };
+    ::-webkit-scrollbar{    width :0;  };
 
 }
